fix(): code links not visible

--- a/static/css/coll_code.css
+++ b/static/css/coll_code.css
@@ -9,11 +9,11 @@
     color: #fff;
     border: 4px solid #157EAC;
     border-radius: 4px;
+    margin-bottom: 15px;
 }
 
 .highlight-link {
     position: absolute;
-    bottom: 0;
     right: 0;
 }
 
@@ -22,5 +22,5 @@
 }
 
 .highlight {
-    margin: 0px !important;
+    margin-bottom: -24px !important;
 }
